--- a/users/templates/users/dashboard_base.html
+++ b/users/templates/users/dashboard_base.html
@@ -619,7 +619,7 @@
             }
             window.endCall = endCall;
 
-            initVoIPWebSocket();
+            // initVoIPWebSocket(); // Disconnected VoIP implementation for now
         </script>
         {% endif %}
 
